# shared_backend

./: README.md  __init__.py  database.py  pyproject.toml
clients/: article_embedding_database_client.py  auth_service_networking_client.py  content_service_networking_client.py  qdrant_client.py  qdrant_client_models.py  qdrant_shared_client.py  service_http_client.py  user_service_networking_client.py
domain/: __init__.py  article_identity.py  current_user.py  password_policy.py  source_embedding_config.py  source_identity.py  user_identity.py  worker_identity.py
errors/: __init__.py  custom_exceptions.py  exception_handlers.py
schemas/: enums.py  health.py
schemas/account/: __init__.py  account_schema.py
schemas/admin/: __init__.py  admin_stats_schema.py  admin_user_schema.py
schemas/analytics/: analysis_schema.py
schemas/auth/: __init__.py  auth_schema.py  session_schema.py
schemas/internal/: __init__.py  auth_service_schema.py  user_service_schema.py  worker_service_schema.py
schemas/jobs/: job_enqueue_schema.py  job_schema.py
schemas/rss/: rss_company_schema.py  rss_enabled_toggle_schema.py  rss_feed_schema.py  rss_feed_upsert_schema.py  rss_scrape_job_schema.py  rss_source_feed_schema.py  rss_sync_schema.py
schemas/sources/: source_schema.py
schemas/workers/: worker_release_schema.py
security/: internal_service_auth.py
tests/: conftest.py  test_auth_service_networking_client.py  test_content_service_networking_client.py  test_database.py  test_file_sizes.py  test_shared_backend_contracts.py  test_user_service_networking_client.py
utils/: __init__.py  auth_utils.py  datetime_utils.py  environment.py  environment_utils.py  logging_utils.py  public_url.py
